tests/machine/x/go/query_sum_select.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/query_sum_select.go:14:21: cannot use _sumOrdered[int](func() []int {…}()) (value of type float64) as []int value in variable declaration
